# simple-ga-cpp

./: CMakeLists.txt  README.md
src/: ga.hpp  test.cpp
